5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1708_3031.log
== TEST (2019-04-29 15:50:14) 
-- CODE:
x = float(input("valor de x: "))
if (x <= 1):
	print(1)
elif (x > 1 and x<= 2):
	print(2)
elif (x > 2 and x <= 3):
	print(x**2)
elif (x > 3)
	print(x***3)
	
-- ERROR:
File "XXXX", line 8
    elif (x > 3)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:50:14) 
-- CODE:
x = float(input("valor de x: "))
if (x <= 1):
	print(1)
elif (x > 1 and x<= 2):
	print(2)
elif (x > 2 and x <= 3):
	print(x**2)
elif (x > 3)
	print(x***3)
	
-- EXECUTION TIME:
0.122429
-- ERROR:
  File "/home/codebench/codes/1708/3031/main.py", line 8
    elif (x > 3)
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:50:17) 
-- CODE:
x = float(input("valor de x: "))
if (x <= 1):
	print(1)
elif (x > 1 and x<= 2):
	print(2)
elif (x > 2 and x <= 3):
	print(x**2)
elif (x > 3)
	print(x***3)
	
-- ERROR:
File "XXXX", line 8
    elif (x > 3)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:09) 
-- CODE:
x = float(input("valor de x: "))
if (x <= 1):
	print(1)
elif (x > 1 and x<= 2):
	print(2)
elif (x > 2 and x <= 3):
	print(x**2)
elif (x > 3):
	print(x***3)
	
	
-- ERROR:
File "XXXX", line 9
    print(x***3)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:53:12) 
-- CODE:
x = float(input("valor de x: "))
if (x <= 1):
	print(1)
elif (x > 1 and x<= 2):
	print(2)
elif (x > 2 and x <= 3):
	print(x**2)
elif (x > 3):
	print(x**3)
	
	
-- OUTPUT:
46.656000000000006
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:53:22) 
-- CODE:
x = float(input("valor de x: "))
if (x <= 1):
	print(1)
elif (x > 1 and x<= 2):
	print(2)
elif (x > 2 and x <= 3):
	print(x**2)
elif (x > 3):
	print(x**1.53)
	
	
-- EXECUTION TIME:
0.154493
-- TEST CASE 1:
---- input:
3.6
---- correct output:
46.66
---- user output:
7.098111647681246
-- TEST CASE 2:
---- input:
2.9
---- correct output:
8.41
---- user output:
8.41
-- TEST CASE 3:
---- input:
1.2
---- correct output:
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
